--- a/BTimeLogger.Csv/BTimeLogger.Csv.csproj
+++ b/BTimeLogger.Csv/BTimeLogger.Csv.csproj
@@ -5,11 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <ProjectReference Include="..\BTimeLogger.Domain\BTimeLogger.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BTimeLogger.Domain\BTimeLogger.Domain.csproj" />
+    <PackageReference Include="CsvHelper"
+                      Version="27.1.1" />
+
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"
+                      Version="5.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection"
+                      Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration"
+                      Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables"
+                      Version="3.1.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json"
+                      Version="3.1.10" />
   </ItemGroup>
 
 </Project>
