--- a/BTimeLogger.Csv.Tests/BTimeLogger.Csv.Tests.csproj
+++ b/BTimeLogger.Csv.Tests/BTimeLogger.Csv.Tests.csproj
@@ -7,10 +7,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CsvReportReaderTests.cs" />
+    <Compile Remove="CsvStatisticRepositoryTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="TestReport.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="CsvReportReaderTests.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="CsvStatisticRepositoryTests.cs" />
+    <Resource Include="TestReport.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
