--- a/BTimeLogger.Csv/BTimeLogger.Csv.csproj
+++ b/BTimeLogger.Csv/BTimeLogger.Csv.csproj
@@ -9,6 +9,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>BTimeLogger.Csv.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="CsvHelper"
                       Version="27.1.1" />
 
