Conceptually separated interval and statistcs reports. Created new CSV readers and updated UI to reflect.

--- a/BTimeLogger.Csv.Tests/BTimeLogger.Csv.Tests.csproj
+++ b/BTimeLogger.Csv.Tests/BTimeLogger.Csv.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="CsvReportReaderTests.cs">
+    <EmbeddedResource Include="IntervalsCsvReaderTests.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
