--- a/BTimeLogger.Domain/BTimeLogger.Domain.csproj
+++ b/BTimeLogger.Domain/BTimeLogger.Domain.csproj
@@ -6,14 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection"
-                      Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration"
-                      Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables"
-                      Version="3.1.10" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json"
-                      Version="3.1.10" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.10" />
   </ItemGroup>
 
 </Project>
