--- a/BTimeLogger.Wpf/BTimeLogger.Wpf.csproj
+++ b/BTimeLogger.Wpf/BTimeLogger.Wpf.csproj
@@ -4,7 +4,13 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>clockIcon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\Pictures\clockIcon.ico" />
+    <None Remove="Resources\Pictures\transparentClock.png" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
@@ -27,6 +33,12 @@
     <ProjectReference Include="..\..\ATimeLogger\WpfCore\WpfCore.csproj" />
     <ProjectReference Include="..\BTimeLogger.Csv\BTimeLogger.Csv.csproj" />
     <ProjectReference Include="..\BTimeLogger.Domain\BTimeLogger.Domain.csproj" />
+  </ItemGroup>
+
+  
+  <ItemGroup>
+    <Resource Include="Resources\Pictures\clockIcon.ico" />
+    <Resource Include="Resources\Pictures\transparentClock.png" />
   </ItemGroup>
 
 </Project>
