--- a/BTimeLogger.Domain.Tests/BTimeLogger.Domain.Tests.csproj
+++ b/BTimeLogger.Domain.Tests/BTimeLogger.Domain.Tests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BTimeLogger.Domain\BTimeLogger.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
