Add WpfCore project and related test project
The solution used to use project references to projects in the ATimeLogger
solution, but this created issues when the solutions were moved around on the disk.

I have copied the entire projects, which will also allow for modification within
this project without affecting the ATimeLogger solution.

--- a/BTimeLogger.Wpf/BTimeLogger.Wpf.csproj
+++ b/BTimeLogger.Wpf/BTimeLogger.Wpf.csproj
@@ -33,9 +33,9 @@
 
   
   <ItemGroup>
-    <ProjectReference Include="..\..\ATimeLogger\WpfCore\WpfCore.csproj" />
     <ProjectReference Include="..\BTimeLogger.Csv\BTimeLogger.Csv.csproj" />
     <ProjectReference Include="..\BTimeLogger.Domain\BTimeLogger.Domain.csproj" />
+    <ProjectReference Include="..\WpfCore\WpfCore.csproj" />
   </ItemGroup>
 
   
