Add test interval data for use in manual tests and demos

--- a/BTimeLogger.Csv/BTimeLogger.Csv.csproj
+++ b/BTimeLogger.Csv/BTimeLogger.Csv.csproj
@@ -23,5 +23,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.10" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="Resources\test_timelogger_data.csv">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
